[gd_scene load_steps=6 format=3 uid="uid://pgccbl25m1"]

[ext_resource type="Script" path="res://src/utils/focus_observer.gd" id="1_2k20x"]
[ext_resource type="Script" path="res://src/player/movement/Portal.gd" id="1_gqlb5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3yhpn"]
size = Vector3(1, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ghq8f"]
transparency = 1
albedo_color = Color(0.180392, 0.541176, 0.619608, 0.764706)

[sub_resource type="CylinderMesh" id="CylinderMesh_apv3k"]
material = SubResource("StandardMaterial3D_ghq8f")

[node name="Portal" type="Node3D"]
script = ExtResource("1_gqlb5")

[node name="FocusObserver" type="Area3D" parent="."]
collision_layer = 3
script = ExtResource("1_2k20x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FocusObserver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_3yhpn")

[node name="Pillar" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02216, 0)
mesh = SubResource("CylinderMesh_apv3k")

[connection signal="focused" from="FocusObserver" to="." method="_on_focus_observer_focused"]
[connection signal="selected" from="FocusObserver" to="." method="_on_focus_observer_selected"]
[connection signal="unfocused" from="FocusObserver" to="." method="_on_focus_observer_unfocused"]
